--- a/ils-input/addcode.css
+++ b/ils-input/addcode.css
@@ -1,13 +1,12 @@
 pre {
-    font-family: 'Fira Code', monospace;
+    font-family: monospace;
     font-size: 1rem;
-    background: var(--alt-bg);
+    background: #ffffef;
     position: relative;
     display: block;
     margin: 2em 0 4em 0;
     max-width: 100%;
     overflow-x: auto;
-    background: var(--il-cloud);
     border: 1px solid black;
     padding: 10px 0;
 }
