Update select on input3.css

--- a/ils-input/input3.css
+++ b/ils-input/input3.css
@@ -63,14 +63,24 @@ ilw-content label {
 }
 
 ilw-content select, ilw-content input, ilw-content textarea, ilw-content datalist, ilw-content datalist option {
-    margin: 0;
-    border-radius: 5px;
-    padding: 10px;
-    font: 1rem/1.125rem var(--il-font-sans);
-    background-color: #fff;
-    border: thin var(--il-blue) solid;
-    width: 200px;
-  }
+  margin: 0;
+  border-radius: 5px;
+  padding: 10px;
+  font: 1rem/1.125rem var(--il-font-sans);
+  background-color: #fff;
+  border: thin var(--il-blue) solid;
+  width: 200px;
+}
+
+ilw-content select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512' width='18' height='18' ><path fill='%23ff5f05' d='M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z'></path></svg>");
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 12px);
+  background-position-y: 10px;
+}
 
 ilw-content input.ils-input-long, ilw-content textarea, ilw-content select.ils-input-long {
   width: calc(100% - 20px);
@@ -85,12 +95,12 @@ ilw-content input.ils-input-short {
 }
 
 ilw-content input:focus, ilw-content textarea:focus, ilw-content select:focus, ilw-content input:focus-visible, ilw-content textarea:focus-visible, ilw-content select:focus-visible {
-    background: var(--il-storm-lighter-4);
+    background-color: var(--il-storm-lighter-4);
     outline: 3px solid var(--il-altgeld);
   }
 
   ilw-content input:hover, ilw-content textarea:hover, ilw-content select:hover {
-    background: var(--il-storm-lighter-4);
+    background-color: var(--il-storm-lighter-4);
   }
 
   ilw-content button[disabled], ilw-content button[disabled]:focus, ilw-content button[disabled]:hover {
